# qrtr

./: .gitignore  Android.bp  Makefile  meson.build  meson_options.txt  qrtr-ns.service.in  qrtr.py
.github/workflows/: ci.yml  codeql-analysis.yml
ci/: alpine.sh  archlinux.sh  debian.cross-compile.sh  debian.i386.sh  debian.sh  fedora.sh
include/: libqrtr.h  meson.build
lib/: libqrtr.c  libqrtr.h  logging.c  logging.h  meson.build  qmi.c  qmi_tlv.c  qrtr.c
src/: addr.c  cfg.c  endian.h  hash.c  hash.h  lib.c  lib.h  list.h  lookup.c  map.c  meson.build  ns.c  ns.h  qrtr.h  types.h  util.c  util.h  waiter.c
